added update user api for grpc server
